@@ -4,11 +4,13 @@ package io.confluent.parallelconsumer;
  * Copyright (C) 2020-2022 Confluent, Inc.
  */
 
+import lombok.experimental.StandardException;
+
 /**
- * Used for testing error handling - easier to identify than a plan exception.
+ * Used for testing error handling - easier to identify than a plain exception.
+ *
+ * @author Antony Stubbs
  */
-public class FakeRuntimeException extends RuntimeException {
-    public FakeRuntimeException(String msg) {
-        super(msg);
-    }
+@StandardException
+public class FakeRuntimeException extends PCRetriableException {
 }
